[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/Cauldron/Ingredients/Ingredient.gd" type="Script" id=1]
[ext_resource path="res://Assets/Cauldron/poÆo amarela.png" type="Texture" id=2]
[ext_resource path="res://Assets/Fonts/prstart.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 21
font_data = ExtResource( 3 )

[node name="Yellow" type="TextureButton"]
margin_right = 280.0
margin_bottom = 279.0
texture_normal = ExtResource( 2 )
expand = true
stretch_mode = 4
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="my_name" type="Label" parent="."]
margin_left = 25.0
margin_top = 287.0
margin_right = 273.0
margin_bottom = 321.0
custom_fonts/font = SubResource( 1 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="button_down" from="." to="." method="_on_button_down"]
[connection signal="button_up" from="." to="." method="_on_button_up"]
